erDiagram
    %% =====================================================================
    %% BASE VERSION - lottery syndicate (Lotto 6 aus 49)
    %%
    %% Core idea: each participant has exactly one bet row per BET PERIOD.
    %% How long a period runs is up to the administrator - a single period
    %% spanning the whole tipp year yields "one row per year", twelve monthly
    %% periods allow a monthly change.
    %%
    %% The row is submitted monthly on a shared ticket and automatically takes
    %% part in every draw of that month. Winnings are collected over the tipp
    %% year and distributed evenly at the end.
    %% =====================================================================

    %% --- Master data ---
    User |o--|| Participant : "is assigned to"

    %% --- Tipp year and membership ---
    TippYear ||--o{ Membership : "has members"
    Participant ||--o{ Membership : "participates in"

    %% --- Bet period: freely chosen validity window ---
    TippYear ||--o{ BetPeriod : "is divided into"

    %% --- Bet row: one per participant and bet period ---
    BetPeriod ||--o{ BetRow : "scopes"
    Participant ||--o{ BetRow : "owns"

    %% --- Monthly ticket ---
    TippYear ||--o{ Ticket : "is submitted as"
    Ticket ||--o{ TicketRow : "carries"
    BetRow ||--o{ TicketRow : "is printed as"

    %% --- Draws and the ticket's winnings ---
    TippYear ||--o{ Draw : "covers"
    Ticket ||--o{ TicketDrawResult : "wins in"
    Draw ||--o{ TicketDrawResult : "produces"
    TicketRow ||--o{ TicketRowMatch : "is evaluated as"
    Draw ||--o{ TicketRowMatch : "evaluates"

    %% --- Fees ---
    Ticket ||--o{ Fee : "is charged as"
    Participant ||--o{ Fee : "owes"

    %% --- Yearly distribution ---
    TippYear ||--o| Payout : "is settled by"
    Payout ||--o{ PayoutShare : "splits into"
    Participant ||--o{ PayoutShare : "receives"

    %% --- Event Sourcing ---
    EventStore ||--o{ EventStream : "contains"
    EventStream ||--o{ Snapshot : "has"
    Participant ||--o{ EventStream : "owns stream"
    TippYear ||--o{ EventStream : "owns stream"
    BetPeriod ||--o{ EventStream : "owns stream"
    BetRow ||--o{ EventStream : "owns stream"
    Ticket ||--o{ EventStream : "owns stream"
    Draw ||--o{ EventStream : "owns stream"
    EventStore ||--o{ EventPublisher : "publishes to"
    EventPublisher ||--o{ ProjectionState : "updates"
    CommandLog ||--o{ EventStore : "causes (causation_id)"
    Participant ||--o{ CommandLog : "issues"

    User {
        int user_id PK
        string username UK
        string password_hash
        string email UK
        datetime created_at
        datetime last_login
        boolean is_active
    }

    Participant {
        int participant_id PK
        int user_id FK "nullable, UK - optional account link"
        string display_name
        datetime registered_at
        boolean is_active
        int version "Optimistic locking"
    }

    TippYear {
        int tipp_year_id PK
        string name "e.g. Tipp year 2026"
        date start_date "freely defined, not tied to the calendar"
        date end_date
        string status "planned / running / closed / distributed"
        decimal ticket_cost_per_row "cost of one row per draw"
        int version "Optimistic locking"
        datetime created_at
    }

    Membership {
        int membership_id PK
        int participant_id FK "UK(participant_id, tipp_year_id)"
        int tipp_year_id FK
        datetime joined_at
        datetime left_at "nullable"
        string status "active / ended"
        int version "Optimistic locking"
    }

    BetPeriod {
        int bet_period_id PK
        int tipp_year_id FK "UK(tipp_year_id, start_date)"
        string name "e.g. 2026 full year / Q1 2026 / March 2026"
        date start_date "freely chosen by the administrator"
        date end_date
        int sequence "order within the tipp year"
        int version "Optimistic locking"
    }

    BetRow {
        int bet_row_id PK
        int participant_id FK "UK(participant_id, bet_period_id) - exactly one row per period"
        int bet_period_id FK
        json numbers "JSONB - the six numbers, sorted ascending"
        datetime assigned_at
        int version "Optimistic locking"
    }

    Ticket {
        int ticket_id PK
        int tipp_year_id FK "UK(tipp_year_id, period_start)"
        date period_start "the day the Spielauftrag was handed in"
        date period_end "derived: period_start + duration_weeks x 7 - 1 days"
        int duration_weeks "Laufzeit as chosen; null before it was recorded"
        string draw_days "wednesday / saturday / both; null before it was recorded"
        string lottery_reference "receipt id from the lottery operator"
        int superzahl "0-9, from the ticket serial - applies to every row"
        int row_count "rows on the ticket when it was submitted"
        int draw_count "derived: duration_weeks x draw days per week"
        decimal total_cost
        string status "draft / submitted / settled"
        datetime submitted_at "nullable"
        int version "Optimistic locking"
    }

    TicketRow {
        int ticket_row_id PK
        int ticket_id FK "UK(ticket_id, bet_row_id)"
        int bet_row_id FK
        json numbers "JSONB - snapshot at submission time"
    }

    Draw {
        int draw_id PK
        int tipp_year_id FK
        date draw_date "UK - Wednesday or Saturday"
        json numbers "JSONB - the six drawn numbers"
        int superzahl "0-9"
        string status "scheduled / drawn / evaluated"
        datetime recorded_at "nullable"
        int version "Optimistic locking"
    }

    TicketDrawResult {
        int ticket_draw_result_id PK
        int ticket_id FK "UK(ticket_id, draw_id)"
        int draw_id FK
        decimal total_amount "what the whole ticket won in this draw"
        json winning_classes "JSONB - class -> count and amount"
        datetime recorded_at
        int version "Optimistic locking"
    }

    TicketRowMatch {
        int ticket_row_match_id PK
        int ticket_row_id FK "UK(ticket_row_id, draw_id)"
        int draw_id FK
        int matched_numbers "0-6"
        boolean superzahl_matched
        int winning_class "nullable - 1..9, null when nothing was won"
        decimal amount "share attributable to this row"
        datetime calculated_at
    }

    Fee {
        int fee_id PK
        int participant_id FK "UK(participant_id, ticket_id)"
        int ticket_id FK
        decimal amount "ticket cost divided by the participants on it"
        date due_date
        string payment_status "open / paid / waived"
        datetime paid_at "nullable"
        string payment_method "nullable"
        string booked_by "admin who recorded the payment"
        string note "nullable"
        int version "Optimistic locking"
    }

    Payout {
        int payout_id PK
        int tipp_year_id FK "UK - one distribution per year"
        decimal total_winnings "sum over all TicketDrawResult of the year"
        int participant_count "shares the total is split into"
        decimal share_per_participant
        datetime distributed_at
        string booked_by
        int version "Optimistic locking"
    }

    PayoutShare {
        int payout_share_id PK
        int payout_id FK "UK(payout_id, participant_id)"
        int participant_id FK
        decimal amount "equal share, independent of periods paid"
        string payment_status "open / paid"
        datetime paid_at "nullable"
    }

    %% --- Event Sourcing Tables ---
    EventStore {
        bigint event_store_id PK
        string aggregate_type "UK(aggregate_type, aggregate_id, version)"
        string aggregate_id
        bigint version
        string event_type
        json event_data "JSONB"
        json metadata "JSONB"
        datetime occurred_at
        string causation_id "Command ID"
        string correlation_id "Trace ID"
    }

    EventStream {
        string stream_id PK
        string aggregate_type "UK(aggregate_type, aggregate_id)"
        string aggregate_id
        bigint current_version
        datetime created_at
        datetime updated_at
    }

    Snapshot {
        bigint snapshot_id PK
        string stream_id FK "UK(stream_id, version)"
        bigint version
        json aggregate_state "JSONB"
        datetime created_at
    }

    ProjectionState {
        string projection_name PK
        bigint publisher_id FK
        bigint last_processed_position
        string status
        datetime updated_at
        text error_message
    }

    EventPublisher {
        bigint publisher_id PK
        string event_type
        bigint last_published_position
        datetime last_published_at
    }

    CommandLog {
        string command_id PK "UUID - returned as CommandResponse.commandId"
        string idempotency_key UK "nullable - client supplied, dedupes retries"
        string command_type
        int issued_by_participant_id FK "nullable - null for system/admin commands"
        string aggregate_type "nullable until resolved"
        string aggregate_id "nullable until resolved"
        string status "accepted / processing / completed / failed"
        bigint event_store_position "nullable - denormalised position of first resulting event"
        int resource_id "nullable"
        int http_status "nullable - replayed on idempotent retry"
        json response_body "JSONB - replayed on idempotent retry"
        text error_message "nullable"
        string correlation_id "Trace ID - propagated to EventStore"
        datetime accepted_at
        datetime completed_at "nullable"
    }
